# fraud_cc_detection

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yml  training_pipeline.yml
notebooks/: 01_loading_raw_data.ipynb  02_preprocess_raw_data_into_modeling_data.ipynb  03_splitting_data.ipynb  05_backfill_feature_store.ipynb  05_feature_store.ipynb  06_feature_pipeline.ipynb
scripts/: backfill_feature_group.py  feature_pipeline.py  training_pipeline.py
src/: config.py  data.py  data_split.py  features.py  model.py  model_registry_api.py  paths.py
